--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@ input::-webkit-inner-spin-button {
 }
 </style>
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DE7JW7Z3EM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DE7JW7Z3EM');
+</script>
+
 <body>
 
 <div id="svg_div"></div>
