--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Japan Map</title>
+<title>Japan map</title>
 <style>
 body {
   font-family: "Poppins", sans-serif;
@@ -125,7 +125,7 @@ input::-webkit-inner-spin-button {
 <div class="wrap">
 <div class="box">
 
-<h1>Japan Map</h1>
+<h1>Japan map</h1>
 <p><i>with islands down to 65 sq km</i></p>
 
 <label><input id="label" placeholder="Enter text" /> Label</label><br>
