--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@ input::-webkit-inner-spin-button {
 
 <h1>Japan map</h1>
 <p><i>with islands down to 65 sq km</i></p>
-
+<hr>
+<p>Create a map of Japan using latitude and longitude points and prefectural shading. Export as svg and png. Import as svg and csv.</p>
 <label><input id="label" placeholder="Enter text" /> Label</label><br>
 <label><input id="latitude" type="number" placeholder="23 to 47" /> Latitude</label><br>
 <label><input id="longitude" type="number" placeholder="122 to 148" /> Longitude</label><br>
@@ -185,3 +186,4 @@ input::-webkit-inner-spin-button {
 </script>
 </body>
 </html>
+
